--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.1.0",
     "@heroicons/react": "^2.1.1",
     "nanoid": "^5.0.6",
     "react": "^18.2.0",
